--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -186,7 +186,7 @@ A为**根节点**，它没有父节点。
 
 A是B、E的**父节点**，BE互为**兄弟节点**。
 
-CDE叫做**叶子节点（叶节点）**，它们没有字节点。
+CDE叫做**叶子节点（叶节点）**，它们没有子节点。
 
 **后继节点：**比当前节点大的最小节点。
 
