--- a/docs/base/正则表达式.md
+++ b/docs/base/正则表达式.md
@@ -4,15 +4,15 @@
 
 ## 元字符表：
 
-| 元字符 |                                                            |           |
-| ------ | ---------------------------------------------------------- | --------- |
-| .      | 除换行符以外的任意字符。                                   |           |
-| ^      | 匹配字符是否是``字符串的开始位置``。                       | 定位      |
-| $      | 匹配字符是否是``字符串的结束位置``。                       | 定位      |
-| \w     | 匹配``字母、数字、下划线、汉字``。                         |           |
-| \s     | 匹配``任意的空白符``(空格、Tab、换行等)。                  |           |
-| \b     | 匹配``单词的开头或结尾``。即前一个字符和后一个字符不全是\w | \bhello\b |
-| \d     | 匹配``数字``。                                             |           |
+| 元字符 |                                           |                              |
+| ------ | ----------------------------------------- | ---------------------------- |
+| .      | 除换行符以外的任意字符。                  |                              |
+| ^      | 匹配字符是否是``字符串的开始位置``。      | 定位                         |
+| $      | 匹配字符是否是``字符串的结束位置``。      | 定位                         |
+| \w     | 匹配``字母、数字、下划线、汉字``。        |                              |
+| \s     | 匹配``任意的空白符``(空格、Tab、换行等)。 |                              |
+| \b     | 匹配``单词的开头或结尾``。                | \bhello\b， 匹配 hello  单词 |
+| \d     | 匹配``数字``。                            |                              |
 
 ## 反义表
 
@@ -29,7 +29,7 @@
 
 
 
-## 限定符表：
+## 限定符表
 
 | 限定符 |                                          |      |
 | ------ | ---------------------------------------- | ---- |
@@ -44,21 +44,32 @@
 | ??     | 重复``0次或者1次``，但是尽可能少的重复。 |      |
 |        |                                          |      |
 
-### 分组
+## 分组
 
-> 使用小括号进行分组，以左括号为标志，从左到右组号依次递增，1、2、3、N；0表示的是整串匹配到的内容。 
+> 使用小括号进行分组，以左括号为标志。
+>
+> 从左到右组号依次递增，1、2、3、N。
+>
+> 0表示的是整串匹配到的内容。 
 
-| 备注             | 代码           |                                              |
-| ---------------- | -------------- | -------------------------------------------- |
-|                  | (exp)          | 匹配exp,并将匹配内容捕获到自动分组中。       |
-|                  | (?\<name\>exp) | 匹配exp,并将匹配内容捕获到名为name的分组中。 |
-|                  | (?:exp)        | 仅匹配，不分组，也不捕获内容到分组中。       |
-|                  |                |                                              |
-| 零宽正向先行断言 | (?=exp)        | 断言自身出现的位置的后面能匹配表达式exp      |
-| 零宽正向后行断言 | (?<=exp)       | 断言自身出现的位置的前面能匹配表达式exp      |
-| 零宽负向先行断言 | (?!exp)        | 断言此位置的后面不能匹配表达式exp            |
-| 零宽负向后行断言 | (?<!exp)       | 断言此位置的前面不能匹配表达式exp            |
-|                  | (?#comment)    | 注释，不参数正则匹配                         |
+### 捕获
+
+|      | 代码           |                                              |      |
+| ---- | -------------- | -------------------------------------------- | ---- |
+|      | (exp)          | 匹配exp,并将匹配内容捕获到自动分组中。       |      |
+|      | (?\<name\>exp) | 匹配exp,并将匹配内容捕获到名为name的分组中。 |      |
+|      | (?:exp)        | 仅匹配，不分组，也不捕获内容到分组中。       |      |
+|      |                |                                              |      |
+| 注释 | (?#comment)    | 不参数正则匹配                               |      |
+
+### 零宽断言
+
+| 零宽断言         | 语法     |                                         |                           |
+| ---------------- | -------- | --------------------------------------- | ------------------------- |
+| 零宽正向先行断言 | (?=exp)  | 断言自身出现的位置的后面能匹配表达式exp | 即匹配表达式exp前面的位置 |
+| 零宽正向后行断言 | (?<=exp) | 断言自身出现的位置的前面能匹配表达式exp |                           |
+| 零宽负向先行断言 | (?!exp)  | 断言此位置的后面不能匹配表达式exp       |                           |
+| 零宽负向后行断言 | (?<!exp) | 断言此位置的前面不能匹配表达式exp       |                           |
 
 ## 分支条件
 
