--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -31,6 +31,32 @@ npm run dev
 adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
 ```
 
+---
+
+## brew
+
+安装brew :
+
+```bash
+ruby -e "$(curl -fsSL /homebrew/go)"
+```
+
+```bash
+brew deps 		# 列出软件包的依赖关系
+brew info 		# 查看软件包信息
+brew list		# 列出已安装的软件包
+brew search 
+brew install 
+brew uninstall 
+brew update		# 更新 Homebrew 的信息
+brew outdated		# 看一下哪些软件可以升级
+brew upgrade; brew cleanup    # 如果都要升级，直接升级完然后清理干净
+brew upgrade <xxx>	# 如果不是所有的都要升级，那就这样升级指定的
+
+```
+
+---
+
 ## windows choco 
 
 [Chocolatey Software | Installing Chocolatey](https://chocolatey.org/install)
@@ -43,7 +69,14 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManage
 
 
 
+## Command Line Tools for XCode
 
+```bash
+xcode-select --install
+# 更新
+softwareupdate --list
+softwareupdate --install -a
+```
 
 ## cocoapods
 
@@ -70,28 +103,6 @@ unrar v file.rar ——————》查看rar更详细信息
 unrar t file.rar ——————》检查是否可以成功压缩
 
 tar -xvf
-```
-
-## home brew
-
-安装brew :
-
-```bash
-ruby -e "$(curl -fsSL /homebrew/go)"
-```
-
-```bash
-brew deps *		# 列出软件包的依赖关系
-brew info *		# 查看软件包信息
-brew list		# 列出已安装的软件包
-brew search *
-brew install *
-brew uninstall *
-brew update	*		# 更新 Homebrew 的信息
-brew outdated		# 看一下哪些软件可以升级
-brew upgrade; brew cleanup    # 如果都要升级，直接升级完然后清理干净
-brew upgrade <xxx>	# 如果不是所有的都要升级，那就这样升级指定的
-
 ```
 
 ## Tomcat
