--- a/docs/base/常见算法.md
+++ b/docs/base/常见算法.md
@@ -27,5 +27,44 @@
 
 
 
+## 完全二叉树
 
+在堆排序中会使用完全二叉树
+
+数组堆化
+
+* 数组的第一个元素`array[0]`不存储数据。
+* 堆中的第一个元素就是数组 `array[1]`。
+
+### 完全二叉树中 父节点和子节点间的快速定位。假设 父节点位置为 i。
+
+存在两种情况 序号从 0 开始：
+
+```kotlin
+val left = 2 * i + 1
+val right = 2 * i + 2
+```
+
+序号从 1 开始：
+
+```kotlin
+val left = 2 * i
+val right = array[2 * i + 1]
+```
+
+### 求完全二叉树最后一个非叶子节点
+
+完全二叉树 长度为 n。
+
+存在两种情况 序号从 0 开始：
+
+```kotlin
+val node = n >>> 1 - 1;
+```
+
+序号从 1 开始：
+
+```kotlin
+val node = n >>> 1;
+```
 
