--- a/docs/base/设计模式.md
+++ b/docs/base/设计模式.md
@@ -8,27 +8,53 @@
 
 ## 设计原则
 
-### SOLID  5个原则
+### SOLID  6个原则
 
-1. **SRP，单一原则**（Single Responsibility Principle）；
+#### 1. 单一原则
 
-   功能明确单一，短小精悍。高内聚低耦合。（工厂、适配器、装饰、代理）
+> 单一原则（Single Responsibility Principle，SRP）
+>
+> （工厂、适配器、装饰、代理）
 
-2. **OCP，开闭**（Open Closed Principle）；
+**功能明确单一，短小精悍**。高内聚低耦合。
 
-   对扩展开发，对修改关闭。不必通过修改内部代码来实现外部的需求扩展。（桥接、迭代器）
+一个类或者接口只承担一个职责。
 
-3. **LSP，里氏替换**（Liskov Substitution Principle）；
+#### 2. 开闭原则
 
-   子类必须能完全的替代父类。
+> 开闭原则（Open Closed Principle，OCP）。
 
-4. **ISP，接口隔离**（Interface-Segregation Principle）；
+**对扩展开发，对修改关闭**。也就是说，应该通过扩展的方式来实现变化，而不是通过修改内部代码来实现。（桥接、迭代器）
 
-   简化、归并对外接口。（适配器、装饰、外观）
+#### 3. 里氏替换原则
 
-5. **DIP，依赖反转/依赖倒置**（Dependency Inversion Principle）；
+> 里氏替换原则（Liskov Substitution Principle，LSP）。
 
-   解耦依赖关系。（抽象工厂、桥接、适配器）
+**子类必须能完全的替代父类**。即凡是使用到父类地方都能使用子类代替，且不会发生任何错误和异常。
+
+
+
+#### 4. 迪米特法则
+
+> 迪米特法则（Law of Demeter），也叫最少知道法则。
+
+**一个对象应该对其他对象有最少的了解**，主要是为了降低类间的耦合。
+
+简单概括就是不要过多的调用其他对象的函数，从而加深了两者的耦合，调用对象应该提供另一个接口来供我们方法，将调用逻辑隐藏，封装在内部，这样我们就仅需要了解某一个接口即可。
+
+#### 5. 接口隔离原则
+
+> 接口隔离原则（Interface-Segregation Principle, ISP）
+
+类间的依赖关系应该建立在最小的接口上，不应该对外暴露不需要的接口。简化、归并对外接口。（适配器、装饰、外观）
+
+#### 6. 依赖反转/依赖倒置原则
+
+> 依赖反转/依赖倒置原则（Dependency Inversion Principle，DIP）
+>
+> （抽象工厂、桥接、适配器）
+
+**上层模块不应该依赖下层模块，而是应该依赖于抽象**。也就是面向接口编程，解耦依赖关系。
 
 ### DRY（Don’t Repeate Yourself）
 
@@ -62,6 +88,12 @@
 
 ### 单例/单件
 
+
+
+
+
+
+
 ---
 
 ## 行为模式
@@ -86,7 +118,9 @@
 
 ### 迭代器
 
-### 中介者
+### 中介者模式
+
+是一种多对多的访问模式，例如 MVC 中的 Control 就是 Model 和 View的中介者。
 
 ### 备忘录
 
@@ -108,36 +142,84 @@
 >
 > 隔离了客户代码和原对象的接口，解决类间或者对象间关系复杂的问题。
 
-### 适配器
+### 适配器模式
 
-主要目的是【接口转换】：通过适配器在不改动源码的前提下，将对象转换为本系统中适用的形式。
+**主要目的是【接口转换】**：通过适配器在不改动源码的前提下，将对象转换为本系统中适用的形式。
 
-### 代理
 
-包装一个对象，不允许外部直接和内部通讯，用代理对象控制内部真实对象执行操作。外部只需要知道代理对象即可。
 
-主要目的是【控制】，内部持有【真实对象的引用】，我们都是通过代理对象来调用具体的功能接口。
+
+
+### 代理模式
+
+代理模式内部会包装一个对象，并且**不允许外部直接和内部对象通讯，用代理对象控制内部真实对象执行操作**。外部只需要知道代理对象即可。是一种 一对一的访问模式。
+
+**主要目的是【控制】，内部持有【真实对象的引用】**，我们都是通过代理对象来调用具体的功能接口。
 
 * 内部对象不方便对外暴露，对外是透明的，它的对外的访问是由代理类控制的。
 * 在代理的同时，隐式的扩展真实对象的功能。
 
-### 外观/门面
+### 外观/门面模式
 
 封装一组对象，简化这组对象的通信关系，并提供一个高层次的易用接口，提供给外部使用，降低复杂度。
 
 不屏蔽内部包装的那些对象。
 
-### 桥接
+### 桥接模式
 
-### 组合（Composite）
+> 桥接模式又称为柄体(Handle and Body)模式或接口(Interfce)模式。
+
+**将抽象和实现分离，使两者可以独立变化**。使用组合关系来替代继承关系，避免继承层次导致子类膨胀问题。
+
+和适配器模式的区别，适配器注重接口适配，需要将不兼容的接口转为统一的兼容接口。而桥接模式并不会改变接口，只是通过组合的方式方便两者并行迭代。
+
+经典的实现有 JDBC。
+
+* 抽象部分：JDBC类库本身。
+* 实现部分：对于DB的Driver。
+
+也常用于解决多维度的问题，降低多维度间的耦合度。
+
+例如手机有很多品牌，且又有很多配色，那么品牌和配色就是2个不同的维度，使用桥接模式的就是将这两个维度组合起来。
+
+* 抽象部分：Phone。会包含一个实现部分的引用实例。
+* 实现部分：Color。
+
+这里Phone 和 Color可以独立变化，两者并不会有影响，
+
+```java
+// 抽象部分：Phone
+public abstract class Phone {
+    // 添加 颜色这一个维度。
+    private Color color;
+}
+public class Iphone extends Phone {}
+
+// 实现部分，Color
+public interface Color {}
+public class Black implements Color {}
+
+// 使用
+new Iphone(new Black()); 
+```
 
 
 
-### 装饰（Decorator）
+### 组合模式（Composite）
 
-装饰者模式主要目的是在 不改变对象接口的前提下**【强化】对象的功能**。是一个递归的构造。
+组合模式强调的是部分和整体的关系。而桥接模式则是侧重于两个不同维度间的解耦，它们是平级的。
 
-装饰者模式和代理模式的主要区别是 目的不同，装饰者是为了强化功能，代理是为了访问控制。
+
+
+### 装饰模式（Decorator）
+
+装饰者模式的主要目的是在 不改变对象接口的前提下**【强化】对象的功能**。是一个递归的构造。
+
+
+
+
+
+装饰者模式和代理模式的主要区别是 目的不同，**装饰者是为了强化功能，代理是为了访问控制**。
 
 意思就是：
 
