--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -2,6 +2,20 @@
 
 
 
+---
+
+[Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/?hl=zh-cn)
+
+[查看版本变更：Android Releases | Android Developers (google.cn](https://developer.android.google.cn/about/versions)
+
+[开发者指南  | Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/guide)
+
+[Android Jetpack 开发资源 - Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/jetpack?hl=zh-cn)
+
+[Android 开源项目  | Android Open Source Project](https://source.android.com/)
+
+
+
 ## 拦截器
 
 >  拦截器：选择拦截点，利用拦截数据进行拦截操作。
@@ -94,9 +108,9 @@ LPDDR RAM，全称是“低功耗双倍数据速率内存”
 
 
 
-### 检测工具
+## 检测工具
 
-#### Sonar
+### Sonar
 
 利用Sonar 检测代码的健康度：类行数、平均函数行数等，来对类进行优化。
 
@@ -104,157 +118,8 @@ LPDDR RAM，全称是“低功耗双倍数据速率内存”
 
 
 
----
-
-[Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/?hl=zh-cn)
-
-[查看版本变更：Android Releases | Android Developers (google.cn](https://developer.android.google.cn/about/versions)
-
-[开发者指南  | Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/guide)
-
-[Android Jetpack 开发资源 - Android 开发者  | Android Developers (google.cn)](https://developer.android.google.cn/jetpack?hl=zh-cn)
-
-[Android 开源项目  | Android Open Source Project](https://source.android.com/)
-
-
-
 
 ## View相关
-
-View\.post()
-
-### MeasureSpecMode(测量模式)
-
-```java
-/**
- * 没有任何限制, 想多大多大
- */
-public static final int UNSPECIFIED = 0 << MODE_SHIFT;
-
-/**
- * 父容器已经精确的计算出子View的大小SpecSize, 此时子View的实际大小就是SpecSize, 忽略子View要的大小
- */
-public static final int EXACTLY     = 1 << MODE_SHIFT;
-
-/**
- * 父容器指定了一个大小SpecSize, 子View的大小 <= SpecSize
- */
-public static final int AT_MOST     = 2 << MODE_SHIFT;
-```
-
-### VelocityTracker(速度追踪器)
-
-声明:
-
-```kotlin
-private val mVelocity: VelocityTracker = VelocityTracker.obtain()
-```
-
-使用
-
-```kotlin
-override fun onTouch(event: MotionEvent) {
-    when (event.action) {
-        MotionEvent.ACTION_DOWN -> {
-            mVelocity.clear()
-        }
-        MotionEvent.ACTION_MOVE -> {
-            // 添加用户行为
-            mVelocity.addMovement(event)
-            // 1000：表示每秒的像素值。
-            mVelocity.computeCurrentVelocity(1000)
-        }
-        MotionEvent.ACTION_CANCEL, MotionEvent.ACTION_UP -> {
-        }
-    }
-}
-```
-
-回收:
-
-```kotlin
-override fun onDestroy() {
-    super.onDestroy()
-    mVelocity.recycle()
-}
-```
-
-
-### Scroller(滚动器)
-
-创建实例：
-
-```kotlin
-val scroller: Scroller by lazy {
-    Scroller(context, LinearInterpolator())
-}
-```
-
-设置滚动：
-
-```kotlin
-// startX, startY: 开始滚动的起点坐标
-// dx, dy: 偏移量
-// duration: 滚动耗时，默认250ms
-scroller.startScroll(startX, startY, dx, dy, duration)
-// 惯性滚动时 velocityX，velocityY 可以通过使用VelocityTracker获取
-scroller.fling(startX, startY, velocityX, velocityY, minX, maxX, minY, maxY)
-```
-
-获取滑动信息：
-
-```kotlin
-override fun computeScroll() {
-    // 若滑动已经终止返回false，否则会计算偏移量，并返回ture。
-    if(scroller.computeScrollOffset()) {
-        // 获取滑动的位置
-        var x = scroller.getCurrX()
-        var y = scroller.getCurrY()
-    }
-}
-```
-
-> 停止滑动动画，直接滚动到最终位置
-
-```kotlin
-if (!scroller.isFinished) {
-    scroller.abortAnimation()
-}
-```
-
----
-
-### RecyclerView(列表、表格)
-
-#### 1. LayoutManager
-
-*   GridLayoutManager ： 表格布局
-
-*   LinearLayoutManager ： 线性布局
-
-#### 2. ItemDecoration(装饰)
-
-可以装饰RecyclerView的子item，例如绘制分割线等。
-
-```java
-getItemOffsets(Rect outRect, View view, RecyclerView parent, State state) 
-```
-
-设置边距：
-
-*   outRect : 设置padding, 可以理解为Item包含在这个矩形中
-
-*   view  : itemView
-
-*   parent : RecyclerView
-
-*   state : RecyclerView的状态 但并不包含滑动状态
-
-```java
-onDraw(Canvas c, RecyclerView parent, State state) 
-
-onDrawOver(Canvas c, RecyclerView parent, State state)
-```
 
 ### SwipeRefreshLayout(刷新)
 
@@ -366,6 +231,20 @@ Android为了确保应用程序中关键代码的正确执行，提供了Wake Lo
 * `Resources.arsc`是一个资源索引表，在运行时通过id找到具体对应的资源文件。
 
 `AssetManager`在初始化时将`Resources.arsc`加载进了内存，应用运行时通过将资源id传给Resources类，Resources将id传给`AssetManager`,然后调用jni中的android_util_AssetManager.cpp文件，在资源索引表查找文件的路径，从而加载对应的资源。
+
+
+
+## MPV
+
+MPV 是一款开源的命令行多媒体播放器
+
+[mpv-player/mpv: 🎥 Command line video player (github.com)](https://github.com/mpv-player/mpv)
+
+```shell
+meson setup build
+meson compile -C build
+meson install -C build
+```
 
 
 
