--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -182,11 +182,11 @@
 >
 > 2. 基于数组的顺序存储法。
 
-A为**根节点**，它没有父节点。
+A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
-A是B、E的**父节点**，BE互为**兄弟节点**。
+**根节点**：没有父节点的节点。下图中 A 就是为根节点。
 
-CDE叫做**叶子节点（叶节点）**，它们没有子节点。
+**叶子节点（叶节点）**：没有子节点的节点。下图中CDE就是叶子节点。
 
 **后继节点：**比当前节点大的最小节点。
 
@@ -220,7 +220,7 @@ CDE叫做**叶子节点（叶节点）**，它们没有子节点。
 
 > 前、中、后是表示当前节点的位置。
 
-* **前序遍历**：对于树中任意节点，先打印这个**节点自身**，再打印左子树，最后打印**右子树**。
+* **前序遍历**：对于树中任意节点，先打印这个**节点自身**，再打印**左子树**，最后打印**右子树**。
 
   ```tex
   [ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]
@@ -513,6 +513,17 @@ CDE叫做**叶子节点（叶节点）**，它们没有子节点。
 一致性哈希算法通过将**数据的哈希划分为n个区间（尽可能大）**，并将这些区间分配给m台设备管理，**每台负责`n/m`个区间**。当有新的设备加入时，只需要**将部分区间数据搬迁到新的设备**即可，不需要全部重新哈希计算。
 
 ## 附录
+
+### 存储单位
+
+| 单位       | 大小          |                                                  |
+| ---------- | ------------- | ------------------------------------------------ |
+| bit：位    | 0、1          | 计算运行的基本单位。                             |
+| byte：字节 | 1byte = 8bit  | 文件大小的基本单位。读取的文件流就是byte为单位。 |
+| word：字符 | 1字符 = 2byte | 英文字母：1字符；中文字符：2字符。               |
+|            |               |                                                  |
+
+> 常见的 b 和 B的区别，B指 字节byte，b值 位bit
 
 ### 伪代码
 
