--- a/docs/base/设计模式.md
+++ b/docs/base/设计模式.md
@@ -156,8 +156,8 @@
 
 **主要目的是【控制】，内部持有【真实对象的引用】**，我们都是通过代理对象来调用具体的功能接口。
 
-* 内部对象不方便对外暴露，对外是透明的，它的对外的访问是由代理类控制的。
-* 在代理的同时，隐式的扩展真实对象的功能。
+* **内部对象不方便对外暴露，对外是透明的**，它的对外的访问是由代理类控制的。
+* 在代理的同时，隐式的扩展真实对象的功能。但是不会增加对外的接口。
 
 ### 外观/门面模式
 
@@ -213,15 +213,11 @@ new Iphone(new Black());
 
 ### 装饰模式（Decorator）
 
-装饰者模式的主要目的是在 不改变对象接口的前提下**【强化】对象的功能**。是一个递归的构造。
+装饰者模式的主要目的是在 不改变对象接口的前提下**【强化】对象的功能**，会增加新的API接口。往往是一个递归包装的形式。
 
 
 
+装饰者模式和代理模式的主要区别是 目的不同。
 
-
-装饰者模式和代理模式的主要区别是 目的不同，**装饰者是为了强化功能，代理是为了访问控制**。
-
-意思就是：
-
-* 在使用代理者模式，我们都是通过统一的代理类来调用具体的功能接口，实际访问对象对外是透明的，由代理类控制。
-* 使用装饰者模式时，我们是使用的就是一个个具体的装饰类，这些类有各自的增强方法，都是可以直接对外访问。可以通过递归包装的方式进行访问。
+* **装饰者是为了强化功能**：使用装饰者模式时，我们是使用的就是一个个具体的装饰类，这些类有各自的增强方法，都是可以直接对外访问。可以通过递归包装的方式进行访问。
+* **代理是为了访问控制**：在使用代理者模式，我们都是通过统一的代理类来调用具体的功能接口，实际访问对象对外是透明的，由代理类控制。
