--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -292,6 +292,13 @@ meson install -C build
 
 
 
+### ChatGLM2-6B
+
+[THUDM/ChatGLM2-6B: ChatGLM2-6B: An Open Bilingual Chat LLM | 开源双语对话语言模型 (github.com)](https://github.com/THUDM/ChatGLM2-6B)
+
+
+
 ### ChatGLM-Tuning
 
 [mymusise/ChatGLM-Tuning: 一种平价的chatgpt实现方案, 基于ChatGLM-6B + LoRA (github.com)](https://github.com/mymusise/ChatGLM-Tuning)
+
