--- a/docs/language/java/动态代理.md
+++ b/docs/language/java/动态代理.md
@@ -100,7 +100,7 @@ public class Proxy implements java.io.Serializable {
             if (sm != null) {
                 checkNewProxyPermission(Reflection.getCallerClass(), cl);
             }
-
+			// 获取构造方法
             final Constructor<?> cons = cl.getConstructor(constructorParams);
             final InvocationHandler ih = h;
             if (!Modifier.isPublic(cl.getModifiers())) {
@@ -111,6 +111,7 @@ public class Proxy implements java.io.Serializable {
                     }
                 });
             }
+            // 传入object数组，作为构造函数的参数
             return cons.newInstance(new Object[]{h});
         } catch (IllegalAccessException|InstantiationException e) {
             throw new InternalError(e.toString(), e);
@@ -130,12 +131,19 @@ public class Proxy implements java.io.Serializable {
 
 ##### Proxy.getProxyClass0()
 
+获取到的是 ProxyClassFactory 。
+
 ```java
+	// key: ClassLoader
+	// param: Class<?>[]  interfaces
+	// value: Class<?> 这里是 ProxyClassFactory
+	// KeyFactory 是一个subkey, 由 key 和 param组成。
 	private static final WeakCache<ClassLoader, Class<?>[], Class<?>>
     		proxyClassCache = new WeakCache<>(new KeyFactory(), new ProxyClassFactory());
 
 	private static Class<?> getProxyClass0(ClassLoader loader,
                                            Class<?>... interfaces) {
+        // 
         if (interfaces.length > 65535) {
             throw new IllegalArgumentException("interface limit exceeded");
         }
@@ -143,8 +151,9 @@ public class Proxy implements java.io.Serializable {
         // If the proxy class defined by the given loader implementing
         // the given interfaces exists, this will simply return the cached copy;
         // otherwise, it will create the proxy class via the ProxyClassFactory
+        
         // proxyClassCache 是一个WeakCache
-        // 通过 ProxyClassFactory 来创建代理。
+        // 通过 loader, interfaces 来获取到一个 ProxyClassFactory
         return proxyClassCache.get(loader, interfaces);
     }
 ```
@@ -207,7 +216,7 @@ public class Proxy implements java.io.Serializable {
             // create new value
             V value = null;
             try { 
-                // 添加
+                // 关联 key, parameter
                 value = Objects.requireNonNull(valueFactory.apply(key, parameter));
             } finally {
                 if (value == null) { // remove us on failure
@@ -235,7 +244,7 @@ public class Proxy implements java.io.Serializable {
 
 ##### ProxyClassFactory.apply()
 
-创建了代理类
+创建了代理类 ProxyClassFactory
 
 ```java
 	@Override
@@ -259,7 +268,7 @@ public class Proxy implements java.io.Serializable {
                 long num = nextUniqueNumber.getAndIncrement();
                 // 拼接 代理类名
                 String proxyName = proxyPkg + proxyClassNamePrefix + num;
-				// 创建代理类
+				// 创建代理类，这是一个native函数。
                 return generateProxy(proxyName, interfaces, loader, methodsArray,
                                      exceptionsArray);
             }
