--- a/docs/language/java/对象创建过程.md
+++ b/docs/language/java/对象创建过程.md
@@ -6,23 +6,35 @@
 - 数组
 - Class对象
 
-## 创建方式
+## 对象创建方式
 
 - 通常使用``new``关键字：调用构造器来初始化实例字段。
 - `Object.clone`复制：直接复制已有的数据。
 - 反序列化：直接复制已有的数据。
 - `Unsafe.allocateInstance`：没有初始化实例字段。
 
-## 对象创建过程
+## new语句创建
+
+* 请求内存的 `new` 指令。
+
+* 调用构造器的 `invokespecial` 指令。
+
+构造器调用流程：
+
+> 子类中会优先调用父类的构造器，层层递进直至Object类。
+
+子类构造器调用父类构造器。若父类存在无参构造器，则java编译器会自动添加对父类构造器的调用（隐式调用）。若不存在无参构造器，则需要在子类构造器中显示调用有参构造器（super、this）。
+
+## 对象创建流程
 
 ### 1. 类加载检查
 
-首先需要找到类，然后执行**类加载**。
+首先需要找到类，然后执行类加载。
 
 * JVM虚拟机接收到 `new` 指令。
 * 检查指令的参数是否能在运行时常量池中找到对应类的符号引用。
 * 检查这个符号引用代表的类是否已经被加载过。即类加载的三个过程：加载、连接、初始化。
-* 若未加载则执行类加载流程。
+* 若未加载则**执行类加载流程**。
 
 ### 2. 分配内存
 
@@ -44,17 +56,35 @@
 
 ### 5. 执行init方法初始化
 
-执行完 上面几个步骤，虚拟机的工作基本已经完成了，不过此时所有字段都还是null， 所以需要执行初始化：调用 `init()`函数。
+执行完 上面几个步骤，虚拟机的工作基本已经完成了，不过此时所有字段都还是null。所以在最后会执行 `<init>` 来进行成员变量的初始化（静态变量则是在类加载时期就已经初始化了）。
 
 这个方法会**根据我们设置的初始值来为字段赋值**。初始化完毕后这个对象就真正的创建好了。
+
+>  `<init>` 流程：
+>
+>  * 若存在父类，则先调用 `super.init`。
+>
+>  * 按照声明顺序进行自身非静态变量的赋值初始化。
+>  * **最后调用自身的构造函数**。
+
+
+
+---
+
+## 类加载时机
+
+* 虚拟机启动时标明的启动类。`main()` 函数所在类
+* new 对象实例。
+* 调用类的静态字段或者方法时。
+  * 静态常量不会触发类加载，因为会在编译期间被内联到调用处。
+* 初始化子类时需要先初始化父类。
+* JDK8 的 default 声明的接口（默认实现），接口实现类初始化时 会先将接口初始化。
 
 ## 类加载流程
 
 > 当多个线程访问方法区的同一个类时，若这个类未被JVM加载，此时仅允许一个线程执行加载，其余线程必须等待。
 
-JVM加载一个类时必定会经过**加载、连接、初始化** 这三个过程。
-
-其中连接又包括**验证、准备、解析**三个阶段。
+JVM创建一个对象实例的之前需要先进行类加载，一个类加载必定会经过**加载、连接（验证+准备+解析）、初始化** 这几个过程。
 
 ![image-20230606160421193](./%E5%AF%B9%E8%B1%A1%E5%88%9B%E5%BB%BA%E8%BF%87%E7%A8%8B.assets/image-20230606160421193.png)
 
@@ -67,16 +97,24 @@ JVM加载一个类时必定会经过**加载、连接、初始化** 这三个过
 在类加载的时候，系统会首先判断当前类是否被加载过，已加载过则会之间返回，没有则去尝试加载。
 
 * JVM会使用类加载器 **根据全限定名查询对应的class文件**。
-* 读取 class文件的二进制字节流，转换到方法区中。即**将class文件常量池中的内容存放到方法区的运行时常量池中**。
+* 读取 class文件的二进制字节流，转换为方法区中的运行时数据结构。
   * 由于加载的是二进制字节流，所以class字节码的来源既可以是本地也可以是远程的。只要符合JVM规范即可。
 
-* 在堆中生成一个代表这个类的 **class类对象，用于访问之前存放在方法区中的数据**。
+* 在**堆**中生成一个代表这个类的 **class类对象，用于访问之前存放在方法区中的数据**。
+  * 类的数据还是在方法区中的，class对象仅是个访问入口。
+
 
 ### 2. 连接
 
+连接包含了 验证、准备、解析三个过程。
+
+* **验证**：验证加载的class文件是否符合JVM的规范
+* **准备**：给类的静态变量分配内存，并给定对应类型的初始值。
+* **解析**：将常量池中的符号引用替换为直接引用。
+
 #### 2.1 验证
 
-这个过程主要是为了**确保被加载的类的正确性**。加载的class文件是否符合JVM的规范。
+这个过程主要是为了确保被加载的类的正确性，**验证加载的class文件是否符合JVM的规范**。
 
 > **验证过程是可以跳过的**，可以使用`-Xverify:none`来关闭验证从而缩短类加载时间。
 
@@ -89,29 +127,29 @@ JVM加载一个类时必定会经过**加载、连接、初始化** 这三个过
 
 #### 2.2 准备
 
-在准备阶段**会给类的静态变量分配内存**，并且设置对应数据类型的初始值。静态变量最终会随着class对象一起报错到 java堆中。
+在准备阶段**会给类变量（静态变量）分配内存**，并且**设置对应数据类型的初始值**，需要注意的并不是我们代码中指定的初始值静态变量最终会随着class对象一起保存到 java堆中。
 
-对于静态常量是直接赋值的指定值。
+> 这个过程也包括了静态常量，不过它是直接赋值的指定值。
+>
+> 注意这里并不包括类实例变量，实例变量是在实例化时初始化的。不在类加载阶段。
 
 #### 2.3 解析
 
-**指将常量池中的符号引用替换为直接引用的过程**。主要包括类/接口、字段、方法、方法类型、方法句柄以及调用调用限定符这些符号引用。最终得到这些符号引用在内存中的指针或者偏移量。
+指**将常量池中的符号引用替换为直接引用的过程**。主要包括类/接口、字段、方法、方法类型、方法句柄以及调用调用限定符这些符号引用。最终得到这些符号引用在**内存中的指针或者偏移量**，也就能够获取到真正的内存入口地址。
+
+
 
 ### 3. 初始化
 
-> `<clinit> ()`方法是在编译后自动生成的。它是带锁线程安全，因此多线程进行类初始化存在并发阻塞的问题。
+> `<clinit>` 类型初始化函数 是在编译后自动生成的，在JVM执行类型加载时调用，且只执行一次。它是带锁线程安全，因此多线程进行类初始化存在并发阻塞的问题。
 
 初始化阶段会调用 `<clinit>`方法，开始真正执行字节码。
 
-### 类加载时机
+**主要是对static变量进行初始化操作，也包括static 代码块的执行**。
 
-* 虚拟机启动时标明的启动类。
-* new 对象实例。
-* 调用类的静态字段或者方法时。静态常量除外，因为会在编译期间被内联到调用处，所以不会触发类加载。
-* 初始化子类时需要先初始化父类。
-* JDK8 的 default 接口（默认实现），接口实现类初始化时 会先将接口初始化。
 
-### 类卸载
+
+## 类卸载
 
 > 一个类被卸载 就是 这个类对应的 Class 对象被 GC。
 
@@ -145,28 +183,4 @@ JVM加载一个类时必定会经过**加载、连接、初始化** 这三个过
 
 
 
----
-
-
-
-
-
-## `<clinit>` 和 `<init>`
-
-clinit：类型初始化函数，在JVM执行类型加载时调用，且只执行一次，主要是对static变量进行初始化操作。static 域和 static 代码块都在 clinit 中。
-
-init：java对象创建时执行的实例化操作。
-
-* 子类 init 会先调用 super.init，然后按照顺序进行字段赋值，最后调用 自身的构造函数。
-
-## new语句创建
-
-* 请求内存的 `new` 指令。
-
-* 调用构造器的 `invokespecial` 指令。
-
-构造器调用流程：
-
-> 子类中会优先调用父类的构造器，层层递进直至Object类。
-
-子类构造器调用父类构造器。若父类存在无参构造器，则java编译器会自动添加对父类构造器的调用（隐式调用）。若不存在无参构造器，则需要在子类构造器中显示调用有参构造器（super、this）。
+## 
