--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -315,14 +315,28 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 #### 234树/4阶B树
 
-> 红黑树的前身
+> 为什么B树常用于存储：
+>
+> 由于节点之间是不连续的，不同的节点很可能分布在不同的页中，因此当我们查询一个节点时，二叉树来说比对一个节点就需要一次磁盘寻址。而对于B树来说，由于一个节点可以存放多个元素，是一种矮胖型的结构，一次磁盘寻址可以获取多个元素，虽然可能导致比对次数变多，但是降低了磁盘寻址的次数。
+>
+> 总的来说，寻址次数和树高树对应的，每级需要一次寻址，所以二叉树内存运算次数往往比B树少，但是磁盘寻址次数更多。磁盘寻址的速度却内存运算慢很多。
 
-- 是一种多叉树。
-- 每个节点最多有``3个数据项``和``4个子节点``。
+- B树也是平衡树，和平衡二叉树的确保就是 B树是一种多叉树。其中的4阶B树算是红黑树的前身。
+- 节点遵循 左小右大 的原则。
+- 4阶B树表示每个节点最多有**3个数据项**和**4个子节点**。
 
-![image-20220530143729600](数据结构与算法.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。
+![image-20220530143729600](数据结构与算法.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。将中间节点作为左右元素的父节点，上移一层。
 
 删除操作：``下溢``。
+
+####  B+树
+
+* **非叶子节点**：**保存索引，不保存数据**。
+
+* **叶子节点**：**保存数据**。
+  * 由于是平衡树，因此每次查询次数基本相同，查询很稳定。
+* 每个叶子节点增加了相邻叶子节点的指针，形成了一个链表。结合非叶子节点，有点跳表的意思。
+  * 全表扫描就是将所有叶子节点遍历一遍即可，不需要像B树那样逐层扫描。
 
 
 
@@ -516,12 +530,12 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 ### 存储单位
 
-| 单位       | 大小          |                                                  |
-| ---------- | ------------- | ------------------------------------------------ |
-| bit：位    | 0、1          | 计算运行的基本单位。                             |
-| byte：字节 | 1byte = 8bit  | 文件大小的基本单位。读取的文件流就是byte为单位。 |
-| word：字符 | 1字符 = 2byte | 英文字母：1字符；中文字符：2字符。               |
-|            |               |                                                  |
+| 单位       | 大小                  |                                                  |
+| ---------- | --------------------- | ------------------------------------------------ |
+| bit：位    | 可以表示 0和1。       | 计算运行的基本单位。                             |
+| byte：字节 | 1byte = 8bit          | 文件大小的基本单位。读取的文件流就是byte为单位。 |
+| word：字符 | 1字符 = 2byte = 16bit | 英文字母：1字符；中文字符：2字符。               |
+|            |                       |                                                  |
 
 > 常见的 b 和 B的区别，B指 字节byte，b值 位bit
 
@@ -596,3 +610,20 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
+### 有序度和逆序度
+
+* 有序度：表示一组数据的有序程度。将队列中每个数后面比当前数小的数的个数之和。
+* 逆序度：表示一组数据的无序程度。
+* 完全有序/完全逆序 计算公式：n(n-1)/2
+
+例如  `1、2、3`。
+
+有序度：3；完全有序：2 + 1 + 0;（1，2）（1，3）（2，3）
+
+逆序度：0
+
+例如  `1、2、5、3`。
+
+有序度：5；（1，2）（1，5）（1，3）（2，5）（2，3）
+
+逆序度：1；有 (5，3) 
