--- a/docs/base/常见算法.md
+++ b/docs/base/常见算法.md
@@ -84,6 +84,42 @@ val node = n >>> 1 - 1;
 val node = n >>> 1;
 ```
 
+---
+
+## 编码
+
+### 定长编码
+
+每个编码都使用的相同位数表示。
+
+### 前缀编码
+
+对字符集进行编码时，要求字符集中的任意字符的编码都不是其他字符编码的前缀。
+
+使用前缀树来表示，根节点不包含字符，从根节点到叶子节点的每条路径都代表一个唯一编码，它们的长度也可能是不同的。
+
+### 哈夫曼编码
+
+哈夫曼编码不仅考察 存在多少不同字符编码， 还会考察字符出现的频次。
+
+* 频次高的编码长度短，频次低的长度长。
+
+哈夫曼树是一种 最优二叉树。
+
+组建过程：
+
+1. 将所有字符根据出现频次的高低放到优先级队列中。
+
+2. 从优先级队列中取出 两个 最低频率的字符 A, B，组合成节点C，值为 AB频率之和。C作为 AB的父节点。
+
+3. 将C放会优先级队列，重复第二步。直至队列为空。
+
+
+
+
+
+---
+
 ## 贪心
 
 贪心的核心思想就是 每次都保证局部最优，从而推导全局最优。但不能保证一定是全局最优，主要是由于前一个选择会影响后面的选择。
@@ -101,4 +137,45 @@ val node = n >>> 1;
 * 存在边界值，不会出现无限分解的情况。
 * 子问题可以合并回原问题，且合并操作复杂度较低。
 
-回溯
+## 回溯
+
+时间复杂度：指数级很高，O(2^n)。
+
+空间复杂度：
+
+结合 备忘录，用空间换时间可以去除重复计算降低时间复杂度，接近动态规划。
+
+
+
+## 动态规划
+
+时间复杂度：O(n*w)
+
+空间复杂度：O(n*w)
+
+动态规划用于解决最优问题。
+
+* 最优子结构：问题的最优解包含子问题的最优解；后面阶段的状态可以通过前面阶段的状态推导出来。
+* 无后效性：阶段的状态确定后，不会受后面阶段的影响。
+* 重复子问题：不同的决策序列，到达某个阶段后，可能会产生重复的状态。
+
+
+
+## 并查集
+
+### 基础
+
+并查集是一种树型的数据结构，常用于处理一些**不相交集合的合并于查询问题**。
+
+* 合并两个元素所在集合：分别找到两个元素所在根节点，然后将其中一个集合的根节点作为另一个集合的根节点的父节点。
+* 查询两个元素是否属于同一个集合：分别查找两个元素的根节点，然后比对根节点是否相同，相同就属于同一个结合。
+
+时间复杂度取决于 树的深度 O(h)。
+
+> 路径压缩进行优化：每次查询时将沿途经过的节点的父节点改为根节点。最好情况下，时间复杂度变为 O(1)
+
+### 带权并查集
+
+两个元素建立连接时，不仅仅是将两个元素所在集合进行合并，而且还需要设置一个权值来表示它们间的关系。
+
+> 带权并查集 进行路径压缩优化时，需要重新计算标注权值。
