--- a/docs/base/设计模式.md
+++ b/docs/base/设计模式.md
@@ -102,17 +102,24 @@
 >
 > 描述对象直接动态的消息传递，隔离程序里动态变化的部分。
 
-### 职责链
+### 职责链（责任链）
 
 将多个对象串联成一个**链条**，且每个对象都有机会取处理请求。请求通常是命令模式。
+
+适用于权限控件、多节点的处理等场景。
+
+* OkHttp为了避免将网络请求和请求响应的不同处理逻辑耦合在一起，使用了责任链模式来进行解耦。
+
+* Java 的过滤器 Filter。
+* 常见的流程审批也适合用责任链，总经理、人事经理、项目经理。
 
 ### 命令
 
 ### 策略
 
- 不改变类的外部表现和内部状态。封装了不同的算法，可以在运行时灵活地互相替换算法模块，从而非侵入地改变系统的行为。
+不改变类的外部表现和内部状态。它定义了一些列不同的算法，具有公共接口，可以在运行时灵活地互相替换算法模块，从而非侵入地改变系统的行为。
 
-例如`if/else`等分支决策中，将分支分装成类或lambda表达式（**实现具体的策略**），然后放入对于的容器中（传入策略赋值），最后由容器内部选择合适的策略处理（**动态执行策略**）。
+例如`if/else`等分支决策中，将分支分装成类或lambda表达式（**实现具体的策略**），然后放入对对应的容器中（**传入策略赋值**），最后由容器内部选择合适的策略处理（**动态执行策略**）。
 
 ### 解释器
 
@@ -129,6 +136,10 @@
 ### 观察者
 
 ### 模板方法
+
+适用于存在通用的处理流程，又存在部分个性化的配置。利用的就是继承机制，定义好一套操作流程的骨架，将部分流程的实现放到子类中实现。
+
+
 
 ### 访问者
 
@@ -152,12 +163,28 @@
 
 ### 代理模式
 
-代理模式内部会包装一个对象，并且**不允许外部直接和内部对象通讯，用代理对象控制内部真实对象执行操作**。外部只需要知道代理对象即可。是一种 一对一的访问模式。
+代理模式内部会包装一个对象，并且**不允许外部直接和内部对象通讯，用代理对象控制内部真实对象执行操作**。
 
 **主要目的是【控制】，内部持有【真实对象的引用】**，我们都是通过代理对象来调用具体的功能接口。
 
-* **内部对象不方便对外暴露，对外是透明的**，它的对外的访问是由代理类控制的。
-* 在代理的同时，隐式的扩展真实对象的功能。但是不会增加对外的接口。
+* **内部对象不方便对外暴露**，对外是透明的，内部对象的对外的访问**是由代理类控制的**。
+* 代理对象通常和被代理对象**具有相同的接口**。
+* 在**不改变原始对象**的情况下，隐式的扩展真实对象的功能。但是不会增加对外的接口。
+
+> 委托：和代理差别不大，可以看作是特殊的静态代理。要说区别应该就是 委托注重结果（达到目的即可），而不是控制。
+>
+> 和中介者模式的区别：代理是一种 一对一的访问模式，中介者是多对多
+
+### 装饰模式（Decorator）
+
+装饰者模式的主要目的是在 不改变对象接口的前提下**【强化】对象的功能**，会增加新的API接口。往往是一个递归包装的形式。
+
+> 装饰者模式和代理模式的主要区别是 目的不同。
+
+* **装饰者是为了【强化功能】**：使用装饰者模式时，我们是使用的就是一个个具体的装饰类，这些类有各自的增强方法，都是可以直接对外访问。可以通过递归包装的方式进行访问。
+* **代理是为了【访问控制】**：在使用代理者模式，我们都是通过统一的代理类来调用具体的功能接口，实际访问对象对外是透明的，由代理类控制。
+
+
 
 ### 外观/门面模式
 
@@ -208,16 +235,3 @@ new Iphone(new Black());
 ### 组合模式（Composite）
 
 组合模式强调的是部分和整体的关系。而桥接模式则是侧重于两个不同维度间的解耦，它们是平级的。
-
-
-
-### 装饰模式（Decorator）
-
-装饰者模式的主要目的是在 不改变对象接口的前提下**【强化】对象的功能**，会增加新的API接口。往往是一个递归包装的形式。
-
-
-
-装饰者模式和代理模式的主要区别是 目的不同。
-
-* **装饰者是为了强化功能**：使用装饰者模式时，我们是使用的就是一个个具体的装饰类，这些类有各自的增强方法，都是可以直接对外访问。可以通过递归包装的方式进行访问。
-* **代理是为了访问控制**：在使用代理者模式，我们都是通过统一的代理类来调用具体的功能接口，实际访问对象对外是透明的，由代理类控制。
