--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -240,6 +240,32 @@ meson install -C build
 
 
 
+## JPDA
+
+Java调试器架构 （Java PlatformDebugger Architecture），是Java虚拟机提供的一套**调试和监控虚拟机**专用的接口。
+
+* JVM TI（Java VM Tool Interface）： JVM 对外暴露的一套接口，对JVM的内部事件进行埋点，允许分析器/调试器监控甚至影响目标应用的运行时行为。例如JVM创建对象创建时，会通过 JVM TI 接口回调给Agent。
+* Agent：JVM TI 的具体实现，负责对外通讯
+* JDWP（Java Debug Wire Protocol）：调试器和被调试者间的通讯协议。具体实现可以是Socket、Share Memory等。
+* JDI（Java Debug Interface）:  Java实现的 JDWP通讯协议的客户端接口。调试器通过 JDI 和 JVM 中被调试的程序进行通讯。
+  * IDE 中的调试就是通过 JDI 实现的。
+
+
+
+### JVM TI
+
+可以定制的性能监控、数据采集、行为修改等工具。
+
+* 监控对象的分配 和 回收。
+* 获取 Java堆栈。
+* 根据对象的引用树（引用链），可以遍历查看堆中的所有对象。
+* 修改类：监听 类加载时机，根据回调 来修改类信息。也可以对加密的Class进行解密。
+* 暂停/恢复 线程。
+
+[JVM(TM) Tool Interface 1.2.1 (oracle.com)](https://docs.oracle.com/javase/7/docs/platform/jvmti/jvmti.html)
+
+
+
 
 
 ## Wiki
@@ -261,3 +287,168 @@ meson install -C build
 
 
 
+## libjpeg-turbo编译
+
+源码下载：[libjpeg-turbo/libjpeg-turbo: Main libjpeg-turbo repository (github.com)](https://github.com/libjpeg-turbo/libjpeg-turbo)
+
+cmake-gui下载：[Download | CMake](https://cmake.org/download/)
+
+
+
+### 使用 Android Studio 编译动态库
+
+可以使用 Android Studio 进行编译。
+
+创建一个 Native C++ Project，然后拷贝源码到 cpp 目录下。
+
+关联 源码中的 CMakeLists.txt文件，配置平台架构
+
+```kotlin
+android {
+    compileSdk = libs.versions.compileSdk.get().toInt()
+    defaultConfig {
+        minSdk = libs.versions.minSdk.get().toInt()
+        externalNativeBuild {
+            cmake {
+                cppFlags += "-std=c++11"
+            }
+            ndk {
+                // 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+                abiFilters.add("x86")
+            }
+        }
+    }
+    
+    ndkVersion = "16.1.4479499"
+    externalNativeBuild {
+        cmake {
+            path = file("src/main/cpp/libjpeg-turbo/CMakeLists.txt")
+            version = "3.22.1"
+        }
+    }
+}
+```
+
+直接编译项目即可获取到so。可以从以下几个目录中拷贝，根据 debug还是release 来选择。
+
+* `build/intermediates/stripped_native_libs/debug`：合并了所有依赖。
+* `build/intermediates/merged_native_libs/debug`：去除了符号。
+* `.cxx/Debug/编译标识ID/`
+
+![image-20230801234534713](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801234534713.png)![image-20230801234548271](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801234548271.png)
+
+
+
+### 手动编译动态库
+
+在源码的 `BUILDING.MD` 中列处理如何编译 Android所需的产物。
+
+```markdown
+### Armv8 (64-bit)
+
+**Clang recommended**
+
+The following is a general recipe script that can be modified for your specific
+needs.
+
+    # Set these variables to suit your needs
+    NDK_PATH={full path to the NDK directory-- for example,
+      /opt/android/android-ndk-r16b}
+    TOOLCHAIN={"gcc" or "clang"-- "gcc" must be used with NDK r14b and earlier,
+      and "clang" must be used with NDK r17c and later}
+    ANDROID_VERSION={the minimum version of Android to support.  "21" or later
+      is required for a 64-bit build.}
+
+    cd {build_directory}
+    cmake -G"Unix Makefiles" \
+      -DANDROID_ABI=arm64-v8a \
+      -DANDROID_ARM_MODE=arm \
+      -DANDROID_PLATFORM=android-${ANDROID_VERSION} \
+      -DANDROID_TOOLCHAIN=${TOOLCHAIN} \
+      -DCMAKE_ASM_FLAGS="--target=aarch64-linux-android${ANDROID_VERSION}" \
+      -DCMAKE_TOOLCHAIN_FILE=${NDK_PATH}/build/cmake/android.toolchain.cmake \
+      [additional CMake flags] {source_directory}
+    make
+
+```
+
+完整shell脚本，编译 `Armv8 (64-bit)`
+
+```shell
+# 定义变量
+ANDROID_ARCH=arm
+ANDROID_ARCH_ABI=arm64-v8a
+ANDROID_VERSION=21
+NDK_PATH=~/Library/Android/ndk/android-ndk-r16b
+PREFIX=`pwd`/android/${ARCH}/${CPU}
+
+# 源码文件目录
+MY_SOURCE_DIR=~/GitRepository/libjpeg-turbo
+
+
+ANDROID_ARMV5_CFLAGS="-march=armv5te"
+ANDROID_ARMV7_CFLAGS="-march=armv7-a -mfloat-abi=softfp -mfpu=neon"
+ANDROID_ARMV8_CFLAGS="-march=armv8-a"
+ANDROID_X86_CFLAGS="-march=i386 -mtune=intel -mssse3 -mfpmath=sse -m32"
+ANDROID_X86_64_CFLAGS="-march=x86-64 -msse4.2 -mpopcnt -m64 -mtune=intel"
+
+CFALGS=${ANDROID_ARMV8_CFLAGS}
+
+# 使用 cmake 命令生成 Makefile
+cmake -G"Unix Makefiles" \
+	-DANDROID_ABI=${ANDROID_ARCH_ABI} \
+	-DANDROID_ARM_MODE=${ANDROID_ARCH} \
+	-DANDROID_PLATFORM=android-${ANDROID_VERSION} \
+	-DANDROID_TOOLCHAIN=clang \
+	-DCMAKE_TOOLCHAIN_FILE=${NDK_PATH}/build/cmake/android.toolchain.cmake \
+	-DCMAKE_BUILD_TYPE=Release \
+	-DANDROID_NDK=${NDK_PATH} \
+	-DCMAKE_POSITION_INDEPENDENT_CODE=1 \
+	-DCMAKE_INSTALL_PREFIX=${PREFIX} \
+	-DANDROID_ARM_NEON=TRUE \
+	-DANDROID_STL=c++_static \
+	-DCMAKE_C_FLAGS="${CFALGS} -Os -Wall -pipe -fPIC" \
+	-DCMAKE_CXX_FLAGS="${CFALGS} -Os -Wall -pipe -fPIC" \
+	-DANDROID_CPP_FEATURES=rtti exceptions \
+	-DWITH_JPEG8=1 \
+	${MY_SOURCE_DIR}
+```
+
+```shell
+# 编译 so
+make clean
+make
+make install
+```
+
+
+
+
+
+### 编译 Windows
+
+#### 使用cmake-gui 编译 libjpeg-turbo
+
+1. 打开 cmake-gui。
+2. 配置源码地址、编译输出地址。
+3. 点击Configure 进行编译配置，选择生成什么类型的项目，例如 Visual Studio 2022等。
+4. 点击 Generate 进行构建。
+
+![image-20230801210511067](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801210511067.png)
+
+#### 使用 Visual Studio 进行编译
+
+打开 输出路径 build 中的 `libjpeg-turbo.sln` 。
+
+![image-20230801211032137](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801211032137.png)
+
+
+
+1. 先选择 ALL_BUILD
+2. 在选择 INSTALL。
+
+> 最终产物默认在 `C:\libjpeg-turbo64` 中，是 CMakeLists.txt 中的 `CMAKE_INSTALL_PREFIX ` 决定。
+
+
+
+![image-20230801211138975](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801211138975.png)
