--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -166,6 +166,8 @@ adb shell am clear-debug-app
 # 浏览器打开指定页面
 adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
 
+# 修改设备 dpi
+adb shell wm density 420
 ```
 
 ### 查看环境变量
