--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -436,6 +436,8 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 ### 2.2 排序算法
 
+#### 各种排序算法复杂度表
+
 | 排序算法 | 时间复杂度                  | 空间复杂度 | 稳定排序？ | 原地排序？ |
 | -------- | --------------------------- | ---------- | ---------- | ---------- |
 | 冒泡排序 | O(n^2)                      |            | Y          | Y          |
@@ -455,7 +457,25 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 - 保持：如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
 - 终止：在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法时正确的。
 
+#### 归并排序
+
+核心思想是分治。
+
+将一个大问题**分解**为一个个小问题处理，最后再**合并**结果。
+
+
+
 ####  快速排序
+
+最常见的排序算法之一，Java 的 `Arrays.sort()` 就是快速排序。
+
+核心思想就是分治：
+
+* 对于数组[p, r]，首先选择某个分区点 pivot。
+* 遍历 数组[p, r]，将小于 pivot的放在左边，大于pivot 的放在右边。
+* 递归处理左右分区的数据。
+
+
 
 > 分区选择优化
 
