--- a/docs/base/设计模式.md
+++ b/docs/base/设计模式.md
@@ -78,21 +78,98 @@
 >
 > 封装对象的创建过程，隔离对象的生产和使用。
 
+### 工厂方法
+
+> Android中的应用：`Context.getSystemService(xx)` 通过不同的参数 返回不同的Service。
+
+定义一个用于创建对象的接口，让子类决定实例化哪个类。
+
+```java
+public interface DrawableFactory {
+    Drawable createDrawable()
+}
+
+public class ColorDrawableFactory extends DrawableFactory {
+    @Override
+    public Drawable createDrawable() {
+        return ColorDrawable()
+    }
+}
+
+public class BitmapDrawableFactory extends DrawableFactory {
+    @Override
+    public Drawable createDrawable() {
+        return BitmapDrawable()
+    }
+}
+```
+
+还有一种 通过 大驼峰定义的函数 来创建类对象，也属于工厂模式。
+
+```kotlin
+public fun MainScope(): CoroutineScope = ContextScope(SupervisorJob() + Dispatchers.Main)
+```
+
 ### 抽象工厂
 
-### 工厂方法
+为创**建一组相关或者是相互依赖的对象提供一个接口**，而不需要指定他们的具体类。
+
+其实是基于工厂方法，将多个存在关联的对象通过一个工厂类进行创建。
+
+```java
+public interface VendorFactory {
+    Computer makeComputer()
+    Phone makePhone()
+}
+
+public class AppleFactory extends DrawableFactory {
+    @Override
+    public Computer makeComputer() {
+        return Macbook()
+    }
+    @Override
+    public Phone makePhone() {
+        return IPhone()
+    }
+}
+
+public class HuaWeiFactory extends DrawableFactory {
+    @Override
+    public Computer makeComputer() {
+        return MateBook()
+    }
+    @Override
+    public Phone makePhone() {
+        return P60Pro()
+    }
+}
+```
+
+> 简单工厂模式：不定义接口，直接定义工厂类，并通过静态方法提供功能。
+
+
 
 ### 生成器
 
 ### 原型
 
+将一个对象进行拷贝，创建另一个对象，常见的就是 clone() 方法。
+
+> Android中的应用：Intent
+
+
+
 ### 单例/单件
 
+单例模式的特点就是 单例对象的实例有且仅有一个，作为一个全局对象。
 
+优点：
 
+* 仅有一个实例，可以避免资源的重复占用，从而节约资源
 
+缺点：
 
-
+* 不容易扩展，不适用于变化的场景。
 
 ---
 
