--- a/docs/base/数据结构基础.md
+++ b/docs/base/数据结构基础.md
@@ -1,10 +1,8 @@
-# 数据结构与算法
+# 数据结构基础
 
-## 1 数据结构
+## 线性表
 
-### 1.1 线性表
-
-#### 数组和矩阵
+### 数组和矩阵
 
 > 连续空间
 
@@ -22,7 +20,7 @@
 - 需要连续的存储空间，且大小固定。
 - 插入/删除结点慢。
 
-#### 链表
+### 链表
 
 通过指针链接次序。
 
@@ -41,7 +39,7 @@
 | 双向链表 | 数据域 + 两个指针域。                        | 在单链表的结果上，增加了一个存储上一个结点地址的指针域（**前驱指针**）。Java的`LinkedHashMap` |
 | 循环链表 | 单链表 or 双向链表，**尾结点指针指向头结点** | 能通过任意一个节点找到所有的结点。                           |
 
-#### 静态链表
+### 静态链表
 
 > 用数组表述链表。
 
@@ -49,7 +47,7 @@
 
 
 
-#### 跳表（Skip list）
+### 跳表（Skip list）
 
 > 一种`动态数据结构`，核心就是空间换时间，通过**链表 + 多级索引**的方式减少查询次数。
 >
@@ -67,7 +65,7 @@
 >
 > 查找时先从索引层开始，依次往下遍历。
 
-![跳表](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/%E8%B7%B3%E8%A1%A8.png)
+![跳表](数据结构基础.assets/跳表.png)
 
 跳表索引的动态更新：
 
@@ -75,7 +73,7 @@
 
 通过随机函数来维护索引和原始链表大小的平衡。随机生成k, 将结点添加到 `1~k级索引`中。
 
-#### 散列表（Hash Table）
+### 散列表（Hash Table）
 
 > 基于数组支持按照下表随机访问数据的特性扩展而来。
 >
@@ -98,9 +96,9 @@
 
 查询数据（暂不考虑散列冲突）：输入`key` ，同样通过**散列函数**将`Key`映射为数组的下标，从对应的数组中返回数据。
 
-![散列表](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/%E6%95%A3%E5%88%97%E8%A1%A8.png)
+![散列表](数据结构基础.assets/散列表.png)
 
-##### 散列函数
+#### 散列函数
 
 > 设计方法：数据分析法、直接寻址法、平方取中法、折叠法、随机数法等
 
@@ -114,7 +112,7 @@
 
 
 
-##### 散列冲突
+#### 散列冲突
 
 > 基于鸽巢原理，存在固定n个鸽巢，有n+1只鸽子，那么必然出现2只鸽子在同一个鸽巢里面。
 >
@@ -168,13 +166,13 @@
 >
 > 可以将链表改造为其他数据结构（例如跳表、红黑树等）进行优化，避免退化为O(n)。
 
-##### 散列表的应用
+#### 散列表的应用
 
 * LRU缓存淘汰策略：散列表 + 双向链表
 * Redis有序集合：跳表 + 散列表
 * LinkedHashMap：散列表 + 双向链表，原理同LRU缓存淘汰策略。
 
-### 1.2 树（Tree）
+## 树（Tree）
 
 > 存储方式
 >
@@ -197,26 +195,9 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 * **节点的层数：**节点深度 + 1。levelA = 1；levelB = 2。从上往下递增。
 * **树的高度：**等同 根节点的高度。此处为2。从上往下递减。
 
-![树](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/%E6%A0%91.png)
+![树](数据结构基础.assets/树.png)
 
-#### 二叉树
-
->  每个节点**最多两个**子节点：左子节点和右子节点。
-
-##### 满二叉树
-
-> 特殊的完全二叉树
-
-* 叶子节点都在最底层。
-* 除叶子节点外，都有两个子节点。
-
-##### 完全二叉树
-
-* 叶子节点都在最后两层。
-* 最后一层所有叶子节点都靠左排列（左对齐、连续）。
-* 除最后一层外，其他层节点个数都达到最大。
-
-##### 树的遍历
+### 树的遍历
 
 > 前、中、后是表示当前节点的位置。
 
@@ -238,7 +219,26 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
   [ [左子树的后序遍历结果], [右子树的后序遍历结果], 根节点 ]
   ```
 
-#### 二叉查找树（Binary Search Tree）
+
+
+### 二叉树
+
+>  每个节点**最多两个**子节点：左子节点和右子节点。
+
+### 满二叉树
+
+> 特殊的完全二叉树
+
+* 叶子节点都在最底层。
+* 除叶子节点外，都有两个子节点。
+
+### 完全二叉树
+
+* 叶子节点都在最后两层。
+* 最后一层所有叶子节点都靠左排列（左对齐、连续）。
+* 除最后一层外，其他层节点个数都达到最大。
+
+### 二叉查找树（Binary Search Tree）
 
 > 也叫作`二叉排序树`：由于**左小右大**，使用中序遍历，可以输出有序的数据序列。
 
@@ -248,7 +248,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 - **右子树**上的所有节点的值均**>=父节点**的值。
 - 左右子树也为满足上述条件的二叉搜索树。
 
-##### 查找
+#### 查找
 
 * 首先和根节点比较，如果相等直接返回。
 
@@ -256,14 +256,14 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 * 若**数据比节点大**，则从**右子树中递归**搜索。
 
-##### 插入
+#### 插入
 
 * 执行查找流程
 
 * 若**数据比节点大**且节点的**右子树为空**，则直接将新数据**插入右子节点**位置。若不为空，**则递归遍历右子树**，查找合适位置。
 * 若**数据比节点小**且节点的**左子树为空**，则直接将新数据**插入左子节点**位置。若不为空，**则递归遍历左子树**，查找合适位置。
 
-##### 删除
+#### 删除
 
 1. 需要删除的节点**没有子节点**：只需要将父节点中原本**指向删除子节点的指针置为null**。
 2. **只有一个子节点**：将父节点中原本**指向删除子节点的子节点**。
@@ -287,7 +287,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 >  插入 9、10、11
 
-![image-20220530143106188](数据结构与算法.assets/image-20220530143106188-3892268.png)
+![image-20220530143106188](数据结构基础.assets/image-20220530143106188-3892268.png)
 
 >  旋转操作
 
@@ -296,7 +296,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-#### 平衡树
+### 平衡树
 
 > 保证左右子树高度差相对较小，解决在频繁的插入和删除中时间复杂度退化的问题。
 >
@@ -313,7 +313,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-#### 234树/4阶B树
+### 234树/4阶B树
 
 > 为什么B树常用于存储：
 >
@@ -325,22 +325,23 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 - 节点遵循 左小右大 的原则。
 - 4阶B树表示每个节点最多有**3个数据项**和**4个子节点**。
 
-![image-20220530143729600](数据结构与算法.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。将中间节点作为左右元素的父节点，上移一层。
+![image-20220530143729600](数据结构基础.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。将中间节点作为左右元素的父节点，上移一层。
 
 删除操作：``下溢``。
 
-####  B+树
+###  B+树
+
+是一种平衡树，所有的数据都保持在叶子节点中，因此每次查询次数基本相同，查询很稳定。
 
 * **非叶子节点**：**保存索引，不保存数据**。
 
 * **叶子节点**：**保存数据**。
-  * 由于是平衡树，因此每次查询次数基本相同，查询很稳定。
-* 每个叶子节点增加了相邻叶子节点的指针，形成了一个链表。结合非叶子节点，有点跳表的意思。
+* **叶子节点间增加了相邻叶子节点的指针，形成了一个链表**。结合非叶子节点，有点跳表的意思。
   * 全表扫描就是将所有叶子节点遍历一遍即可，不需要像B树那样逐层扫描。
 
 
 
-#### 红黑树（Red-Black Tree）
+### 红黑树（Red-Black Tree）
 
 > 一种高效的自平衡二叉查找树。但是并不严格符合平衡二叉树的定义，而是近似平衡。
 >
@@ -359,10 +360,10 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 - 红黑树的黑色节点个数 = 234树的节点数。（4、10、7是一个节点的三个数据项）
 - 234树的每一个节点中：黑色节点必为父节点，红色节点为子节点（黑色在中间，红色在两边）。
 
-![image-20220929225928693](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929225928693.png)
+![image-20220929225928693](数据结构基础.assets/image-20220929225928693.png)
 
 
-##### 树的变换
+#### 树的变换
 > 当红黑树平衡被打破时，通过**旋转**和**变色**恢复。
 >
 > 旋转操作对于二叉查找树来说**一般情况就是为了找到合适的中间值，并重新构建成二叉查找树**。
@@ -371,13 +372,13 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 **左旋（rotate left**）：围绕某个点进行左旋（图中为绕1左旋）。 
 
-![image-20220929210112940](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929210112940.png)
+![image-20220929210112940](数据结构基础.assets/image-20220929210112940.png)
 
 **右旋（rotate right）**：围绕某个点进行右旋（图中为绕1右旋）。
 
-![image-20220929210153548](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929210153548.png)
+![image-20220929210153548](数据结构基础.assets/image-20220929210153548.png)
 
-##### 插入操作
+#### 插入操作
 
 * 红黑树规定，插入的节点必须是红色。插入红色不会影响黑高，仅需要处理两个红色结点相邻的场景。
 * 如果插入的是根节点，直接变色为黑色。
@@ -396,7 +397,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
   1. 父、叔结点：改为黑色（黑高同时 + 1，保证局部平衡）。
 2. 祖父结点：改为红色（黑高 - 1，从而保证整体平衡）。
 
-##### 删除操作
+#### 删除操作
 
 * 红色节点直接删除。
 * 黑色节点删除。
@@ -409,7 +410,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
       * 兄弟节点没有红色子节点。（兄弟节点染红，父节点染黑，若父本来就为黑色，则使用父节点作为删除节点递归**A流程**）
     * 删除节点的兄弟节点为红色。（染为黑色后转为上述处理）
 
-#### 递归树
+### 递归树
 
 > 分析递归算法的时间复杂度
 
@@ -417,136 +418,85 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 * 计算每一层的总时间
 * 统计树高，累加
 
-## 2 算法基础
+## 堆
 
-### 2.1 复杂度分析
+### 堆排序
 
-#### 时间复杂度
+在堆排序中会使用完全二叉树。
 
-> 在小规模数据面前, O(n2) 时间复杂度的算法并不一定比 O(nlogn) 的算法执行时间长。因为此时省略的低阶、系数和常数的影响将会放大。
+### 数组堆化
 
-* O(1)：常量级
-* O(n)：线性复杂度
-* O(n^2)：指数复杂度
-* O(logn): 对数复杂度
+* 数组的第一个元素`array[0]`不存储数据。
+* 堆中的第一个元素就是数组 `array[1]`。
 
-#### 空间复杂度
+#### 在完全二叉树中父节点和子节点间的快速定位
 
+假设 父节点位置为 i
 
+存在两种情况 序号从 0 开始：
 
-### 2.2 排序算法
+```kotlin
+val left = 2 * i + 1
+val right = 2 * i + 2
+```
 
-#### 各种排序算法复杂度表
+序号从 1 开始：
 
-| 排序算法 | 时间复杂度                  | 空间复杂度 | 稳定排序？ | 原地排序？ |
-| -------- | --------------------------- | ---------- | ---------- | ---------- |
-| 冒泡排序 | O(n^2)                      |            | Y          | Y          |
-| 插入排序 | O(n^2)                      |            | Y          | Y          |
-| 选择排序 | O(n^2)                      |            | N          | Y          |
-| 快速排序 | O(n logn), 最坏退化为O(n^2) | O(1)       | N          | Y          |
-| 归并排序 | O(n logn)                   | O(n)       | Y          | N          |
-| 计数排序 | O(n + k)，k是数据范围       |            | Y          | N          |
-| 桶排序   | O(n)                        |            | Y          | N          |
-| 基数排序 | O(d n), d是维度             |            | Y          | N          |
+```kotlin
+val left = 2 * i
+val right = array[2 * i + 1]
+```
 
-#### 插入排序
+#### 求完全二叉树最后一个非叶子节点
 
-循环不变式
-> 元素A[1..j-1]就是原来在位置1到j-1的元素，但已按序排列
-- 初始化：循环的第一次迭代之前，它为真。
-- 保持：如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
-- 终止：在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法时正确的。
+完全二叉树 长度为 n。
 
-#### 归并排序
+存在两种情况 序号从 0 开始：
 
-核心思想是分治。
+```kotlin
+val node = n >>> 1 - 1;
+```
 
-将一个大问题**分解**为一个个小问题处理，最后再**合并**结果。
+序号从 1 开始：
 
-
-
-####  快速排序
-
-最常见的排序算法之一，Java 的 `Arrays.sort()` 就是快速排序。
-
-核心思想就是分治：
-
-* 对于数组[p, r]，首先选择某个分区点 pivot。
-* 遍历 数组[p, r]，将小于 pivot的放在左边，大于pivot 的放在右边。
-* 递归处理左右分区的数据。
+```kotlin
+val node = n >>> 1;
+```
 
 
 
-> 分区选择优化
+## 图
 
-* 三数取中法；
+邻接矩阵、邻接表、逆邻接表
 
-  首、尾、中间，分别取出一个数，然后对比大小，取这 3 个数的中间值作为分区点。数组比较大时，取数需要更多，5数、10数等。
+深度广度优先搜索
 
-* 随机法；
 
-  随机选择一个元素作为分区点，每次都选中最差分区的情况不太可能出现。
 
-> 递归优化
+## 并查集
 
-* 限制递归层级；
+### 基础
 
-* 自己实现堆上栈；
+并查集是一种树型的数据结构，常用于处理一些**不相交集合的合并于查询问题**。
 
-  手动模拟递归，越过系统栈大小的限制；
+* 合并两个元素所在集合：分别找到两个元素所在根节点，然后将其中一个集合的根节点作为另一个集合的根节点的父节点。
+* 查询两个元素是否属于同一个集合：分别查找两个元素的根节点，然后比对根节点是否相同，相同就属于同一个结合。
 
-### 2.3 查找
+时间复杂度取决于 树的深度 O(h)。
 
-|          | 时间复杂度 |      |
-| -------- | ---------- | ---- |
-| 二分查找 | O(logn)    |      |
-|          |            |      |
-|          |            |      |
+> 路径压缩进行优化：每次查询时将沿途经过的节点的父节点改为根节点。最好情况下，时间复杂度变为 O(1)
 
-#### 二分查找（Binary Search）
+### 带权并查集
 
-> 折半查找算法
->
-> 在链表中的`跳表`可以支持类似二分的查找算法
+两个元素建立连接时，不仅仅是将两个元素所在集合进行合并，而且还需要设置一个权值来表示它们间的关系。
 
-* 顺序表结构
-* 有序数据集合
+> 带权并查集 进行路径压缩优化时，需要重新计算标注权值。
 
-> 二分查找变形问题、
 
-* 查找第一个值等于给定值的元素
-* 查找最后一个值等于给定值的元素
-* 查找第一个大于等于给定值的元素
-* 查找最后一个小于等于给定值的元素
-
-### 2.4 哈希（Hash）算法
-
-> 将任意长度的二进制值串映射为固定长度的二进制值串。
-
-#### 哈希算法的要求
-
-* **单向推导：**从哈希值不能反推出原始数据（也叫单向哈希算法）。
-* **数据敏感**：对于不同的输入数据，哪怕仅相差一个Bit，得到的哈希值也大不相同。
-* **散列冲突概率低**：鸽巢原理
-* **高效执行：**针对大量文本也能快速的计算出哈希值。
-
-#### 哈希算法的应用
-
-* 安全加密：例如 **MD5**（MD5 Message-Digest Algorithm，MD5 消息摘要算法）、**SHA**（Secure Hash Algorithm，安全散列算法）、**DES**（Data Encryption Standard，数据加密标准）、**AES**（Advanced Encryption Standard，高级加密标准）等。
-* 唯一标识：例如图库搜索图片
-* 数据校验
-* 散列函数：偏向于数据的平均性和执行效率。
-* 负载均衡：客户端IP计算哈希，并根据服务器数量取模分配。
-* 数据分片：使用哈希对海量数据进行分片，多机分布式处理。类同负载均衡。
-* 分布式存储：一致性哈希算法。
-
-#### 一致性哈希算法
-
-> 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。那么所有数据请求都会穿透缓存，直接请求数据库，可能出现雪崩效应，压垮数据库。
-
-一致性哈希算法通过将**数据的哈希划分为n个区间（尽可能大）**，并将这些区间分配给m台设备管理，**每台负责`n/m`个区间**。当有新的设备加入时，只需要**将部分区间数据搬迁到新的设备**即可，不需要全部重新哈希计算。
 
 ## 附录
+
+
 
 ### 存储单位
 
@@ -630,20 +580,3 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-### 有序度和逆序度
-
-* 有序度：表示一组数据的有序程度。将队列中每个数后面比当前数小的数的个数之和。
-* 逆序度：表示一组数据的无序程度。
-* 完全有序/完全逆序 计算公式：n(n-1)/2
-
-例如  `1、2、3`。
-
-有序度：3；完全有序：2 + 1 + 0;（1，2）（1，3）（2，3）
-
-逆序度：0
-
-例如  `1、2、5、3`。
-
-有序度：5；（1，2）（1，5）（1，3）（2，5）（2，3）
-
-逆序度：1；有 (5，3) 
