--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -92,7 +92,11 @@ LPDDR RAM，全称是“低功耗双倍数据速率内存”
 
 ![img](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/2f26e93ac941f30bb4037648640aca44.png)
 
+## 字符编码
 
+大端：最高有效字节在最前面的方式。内存地址小的位置存放数据的高位。已高位开头。
+
+小端：最低有效字节在前面的方式。内存地址小的位置存放数据的低位。已低位开头。
 
 
 
