--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -194,16 +194,15 @@ logcat | grep ActivityManager
 
 ## brew
 
-安装brew :
-
 ```bash
+# 安装brew
 ruby -e "$(curl -fsSL /homebrew/go)"
 ```
 
 ```bash
 brew deps 		# 列出软件包的依赖关系
 brew info 		# 查看软件包信息
-brew list		# 列出已安装的软件包
+brew list		# 列出已安装的软件包s
 brew search 
 brew install 
 brew uninstall 
@@ -212,6 +211,22 @@ brew outdated		# 看一下哪些软件可以升级
 brew upgrade; brew cleanup    # 如果都要升级，直接升级完然后清理干净
 brew upgrade <xxx>	# 如果不是所有的都要升级，那就这样升级指定的
 
+```
+
+> 设置国内源
+
+```shell
+# 更新Homebrew
+cd "$(brew --repo)"
+git remote set-url origin https://mirrors.ustc.edu.cn/brew.git
+
+# 更新Homebrew-core
+cd "$(brew --repo)/Library/Taps/homebrew/homebrew-core"
+git remote set-url origin https://mirrors.ustc.edu.cn/homebrew-core.git
+
+# 更新Homebrew-cask
+cd "$(brew --repo)/Library/Taps/homebrew/homebrew-cask"
+git remote set-url origin https://mirrors.ustc.edu.cn/homebrew-cask.git
 ```
 
 ---
@@ -356,3 +371,6 @@ tar -xvf
 | 选择连续增加的代码块(光标位置往外扩展选择) | `Alt + Shift + 向上箭头` | Extend Selection        |
 | 将当前选择退回到上一个状态                 | `Alt + Shift + 向下箭头` | Shink Selection         |
 
+## Mac选取任意位置文件
+
+`Command + Shift + G`
